--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,3 +12,7 @@ footer {
 body {
   background-color: rgb(242, 242, 242);
 }
+div {
+  border-top: rgb(242, 242, 242);
+  border-bottom: rgb(242, 242, 242);
+}
