--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@ footer {
 }
 body {
   background-color: rgb(242, 242, 242);
+  background: rgb(242, 242, 242);
 }
 div {
   border-top: rgb(242, 242, 242);
