--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,7 +13,7 @@ body {
   background-color: rgb(242, 242, 242);
   background: rgb(242, 242, 242);
 }
-div {
+#main_content_wrap {
   border-top: rgb(242, 242, 242);
   border-bottom: rgb(242, 242, 242);
 }
